# openpilot

./: .gitignore  .gitmodules  CMakeLists.txt
cmake/: FindCython.cmake  UseCython.cmake  detect_target_arch.cmake  get_deps.cmake  macros.cmake  options.cmake  rednose_config.cmake
common/: CMakeLists.txt  clutil.cc  statlog.cc  swaglog.cc
common/kalman/: CMakeLists.txt
common/transformations/: CMakeLists.txt
selfdrive/boardd/: CMakeLists.txt
selfdrive/camerad/: CMakeLists.txt
selfdrive/camerad/cameras/: camera_common.cc  camera_common.h  camera_qcom.cc  camera_qcom.h  camera_qcom2.cc  camera_replay.cc  camera_replay.h  camera_webcam.cc  camera_webcam.h  debayer.cl  sensor2_i2c.h
selfdrive/clocksd/: CMakeLists.txt  clocksd
selfdrive/locationd/: CMakeLists.txt
selfdrive/logcatd/: CMakeLists.txt  logcatd
selfdrive/loggerd/: CMakeLists.txt  logger.cc  loggerd.h
selfdrive/modeld/: CMakeLists.txt
selfdrive/proclogd/: CMakeLists.txt  proclog.cc
selfdrive/sensord/: CMakeLists.txt
selfdrive/ui/: CMakeLists.txt
selfdrive/ui/qt/: spinner  text
selfdrive/ui/replay/: util.cc
