add_cython_target(common.kalman.simple_kalman_impl simple_kalman_impl.pyx CXX)
add_library(common.kalman.simple_kalman_impl MODULE ${common.kalman.simple_kalman_impl})
set_target_properties(common.kalman.simple_kalman_impl PROPERTIES PREFIX "" OUTPUT_NAME "simple_kalman_impl")
target_include_directories(common.kalman.simple_kalman_impl PRIVATE ${Python3_INCLUDE_DIRS} ${CMAKE_CURRENT_SOURCE_DIR})
target_link_libraries(common.kalman.simple_kalman_impl PRIVATE ${Python3_LIBRARIES})
